--- a/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupChain.cshtml
+++ b/BTCPayServer.Plugins.Boltz/Views/Boltz/SetupChain.cshtml
@@ -18,8 +18,12 @@
 
     <div class="form-group absolute">
         <label asp-for="ReserveBalance" class="form-label">Reserve Balance (@unitSats)</label>
-        <small class="text-danger mx-1" data-bs-toggle="tooltip" data-bs-placement="top" title="How much sats to leave in the wallet as a reserve"><vc:icon symbol="info"/></small>
-        <input asp-for="ReserveBalance" type="number" class="form-control"/>
+        <small class="text-danger mx-1" data-bs-toggle="tooltip" data-bs-placement="top"
+            title="How much sats to leave in the wallet as a reserve. Leave a considerable amount if you want to make outgoing lightning payments.">
+            <vc:icon symbol="info" />
+        </small>
+        <!-- TODO: rm min once https://github.com/BoltzExchange/boltz-client/issues/623 is fixed-->
+        <input asp-for="ReserveBalance" type="number" class="form-control" min="1000" />
     </div>
 
     <div class="d-flex flex-row gap-2 justify-content-between">
